--- a/ServiceComplex/Pages/Shared/_Layout.cshtml
+++ b/ServiceComplex/Pages/Shared/_Layout.cshtml
@@ -74,7 +74,19 @@
         </form>
     </li>
     <li class="nav-item align-self-center">
-                    <div class="col-lg-12">
+                    <div class="form-row col-lg-12">
+
+                        <label>سالن :</label>
+                        <select id="Salon" onchange="selectSalon(this)" name="Salon" asp-Items="@(new SelectList(_salonService.GetSelectListItems(), "Value", "Text"))" class=" form-control" required>
+@*                            //<option default="" selected="">انتخاب کنید</option>
+*@
+
+                        </select>
+
+
+
+                    </div>
+                    @*<div class="col-lg-12">
                         <div class="btn-group mb-4 mr-2">
                             <button id="selectSalon" class="btn btn-sm dropdown-toggle btn-sm btn-rounded" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 انتخاب سالن <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
@@ -86,7 +98,7 @@
                                 }
                             </div>
                         </div>
-                    </div>
+                    </div>*@
     </li>
 </ul>
 
@@ -386,16 +398,17 @@
                 "lengthMenu": [7, 10, 20, 50],
                 "pageLength": 7
             });
+           
         });
 
 
+   
         function selectSalon(item){
             debugger
             $.ajax({
-                url:"/BaseData/Salon?handler=ChangeSalon&salonid=" + item,
+                url:"/BaseData/Salon?handler=ChangeSalon&salonid=" + item.value,
                 type: "Get",
                 success: function (result) {
-                    document.getElementById("selectSalon").innerText = result;
                     alert(result);
                 }
             })
