--- a/ServiceComplex/Pages/BaseData/Salon.cshtml
+++ b/ServiceComplex/Pages/BaseData/Salon.cshtml
@@ -112,7 +112,7 @@
                                                 </svg>
                                             </a>
 
-                                            <a class="" onclick="َAddPrd('@item.SlnId')" title="انتساب خدمات">
+                                            <a href="/Products/Assignment?SalonId=@item.SlnId" class="" title="انتساب خدمات">
                                                 <svg style="color:#2196f3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
                                                     <circle cx="12" cy="12" r="10"></circle>
                                                     <line x1="12" y1="16" x2="12" y2="12"></line>
@@ -460,22 +460,6 @@
                 
         }
 
-
-        //  $(document).ready(function () {
-        //      debugger
-
-        //{
-        //    debugger
-        //       // editError.style.display = "block";
-        //       // editError.innerHTML=""
-        //        createError.style.display = "block";
-        //        Create();
-        //}
-        ////}else{
-        ////        editError.style.display = "none";
-        ////        createError.style.display = "none";
-        ////}
-        //  });
         
     </script>
 }
